fixed overflow

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -6,6 +6,8 @@
         &:not(.is-sticky)
             a.logo img
                 filter: invert(1)
+    main
+        overflow: hidden
     .hero 
         padding-top: 0
         margin-left: -$grid-gutter
